--- a/opencog-debian/pln/debian/control
+++ b/opencog-debian/pln/debian/control
@@ -13,7 +13,7 @@ Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, opencog-ure, python3
 Description: OpenCog Probabilistic Logic Network
  Probabilistic Logic Network, or PLN for short, is a logic invented by
- Ben Goertzel et al for common sense reasoning. It is particulaly well
+ Ben Goertzel et al for common sense reasoning. It is particularly well
  suited for uncertain reasoning, especially when knowledge is based on limited
  observations from reality, but can also handle abstract mathematical
  reasoning, and the relationship between the two.
@@ -22,4 +22,18 @@ Description: OpenCog Probabilistic Logic Network
  i.e. a probabilistic distribution over probabilistic distributions. Doing so
  allows one to capture uncertainty while remaining in the well known and
  proven framework of probability theory.
+ .
+ Key features include:
+  - Uncertain inference with confidence intervals
+  - Induction, deduction, abduction, and analogy
+  - Higher-order inference and meta-reasoning
+  - Integration with the Unified Rule Engine (URE)
+  - Truth value mathematics for probabilistic reasoning
+  - Support for both crisp and fuzzy logic
+  - Cognitive synergy with attention allocation and learning
+ .
+ PLN is a core component of the OpenCog AGI framework and enables the
+ system to reason under uncertainty, learn from limited data, and perform
+ common-sense reasoning. It is used in applications including bioinformatics,
+ natural language understanding, and autonomous systems.
 
