Fix cogserver Asio detection issue
- Added libasio-dev to apt dependencies
- Added Asio verification step to confirm installation
- Updated make to use parallel builds with -j$(nproc)

This fixes the cogserver build failure where CMake could not find Asio headers.
The FindAsio.cmake module looks for asio.hpp in /usr/include which is provided by libasio-dev package.

--- a/.github/workflows/ocall.yml
+++ b/.github/workflows/ocall.yml
@@ -26,6 +26,7 @@ jobs:
             cython3 \
             doxygen \
             guile-3.0-dev \
+            libasio-dev \
             libboost-all-dev \
             liboctomap-dev \
             libpq-dev \
@@ -38,6 +39,13 @@ jobs:
           
       - name: Install Cython
         run: python3 -m pip install --upgrade pip cython
+
+      - name: Verify Asio Installation
+        run: |
+          echo "Verifying Asio installation..."
+          dpkg -L libasio-dev | grep asio.hpp || echo "Warning: asio.hpp not found in dpkg list"
+          find /usr/include -name "asio.hpp" 2>/dev/null || echo "Warning: asio.hpp not found in /usr/include"
+          echo "Asio verification complete"
 
       - name: build & install all
         run: |
