--- a/.github/workflows/ocall.yml
+++ b/.github/workflows/ocall.yml
@@ -28,10 +28,15 @@ jobs:
             guile-3.0-dev \
             libasio-dev \
             libboost-all-dev \
+            libgrpc++-dev \
+            libopencv-dev \
             liboctomap-dev \
             libpq-dev \
+            libprotobuf-dev \
             librocksdb-dev \
             libssl-dev \
+            libwebsocketpp-dev \
+            protobuf-compiler \
             python3-dev \
             python3-nose \
             uuid-dev \
