--- a/.github/workflows/oc.yml
+++ b/.github/workflows/oc.yml
@@ -42,7 +42,7 @@ jobs:
     steps:
       # Trust working directory for Git (fix dubious ownership error)
       - name: Trust working directory for Git
-        run: git config --global --add safe.directory /__w/pycog0/pycog0
+        run: git config --global --add safe.directory /__w/occ/occ
 
       # Checkout the Repository
       - name: Checkout Repository
@@ -51,8 +51,8 @@ jobs:
       # Verify PostgreSQL Connection and Setup
       - name: Verify PostgreSQL Connection
         run: |
-          # Install PostgreSQL client
-          sudo apt-get install -y postgresql-client
+          # Install PostgreSQL client (running as root in container)
+          apt-get update && apt-get install -y postgresql-client
           # Wait for PostgreSQL to be ready with timeout
           echo "Waiting for PostgreSQL to be ready..."
           timeout=60
@@ -78,8 +78,8 @@ jobs:
       # 01. Install Build Dependencies
       - name: Install Build Dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y ccache pkg-config cmake build-essential git \
+          apt-get update
+          apt-get install -y ccache pkg-config cmake build-essential git \
             libboost-all-dev librocksdb-dev liboctomap-dev libssl-dev \
             guile-3.0-dev cython3 python3-nose python3-dev valgrind doxygen
 
@@ -89,8 +89,8 @@ jobs:
           mkdir -p cogutil/build && cd cogutil/build
           cmake -DCMAKE_BUILD_TYPE=Release ..
           make -j$(nproc)
-          sudo make install
-          sudo ldconfig
+          make install
+          ldconfig
           cd ../..
 
       # 03. Build and Install atomspace
@@ -99,8 +99,8 @@ jobs:
           mkdir -p atomspace/build && cd atomspace/build
           cmake -DCMAKE_BUILD_TYPE=Release ..
           make -j$(nproc)
-          sudo make install
-          sudo ldconfig
+          make install
+          ldconfig
           cd ../..
 
       # 04. Build and Install atomSpace-storage
@@ -109,8 +109,8 @@ jobs:
           mkdir -p atomspace-storage/build && cd atomspace-storage/build
           cmake -DCMAKE_BUILD_TYPE=Release ..
           make -j$(nproc)
-          sudo make install
-          sudo ldconfig
+          make install
+          ldconfig
           cd ../..
 
       # 05. Build and Install atomspace-rocks
@@ -119,8 +119,8 @@ jobs:
           mkdir -p atomspace-rocks/build && cd atomspace-rocks/build
           cmake -DCMAKE_BUILD_TYPE=Release ..
           make -j$(nproc)
-          sudo make install
-          sudo ldconfig
+          make install
+          ldconfig
           cd ../..
 
       # 06. Build and Install atomspace-restful
@@ -129,8 +129,8 @@ jobs:
           mkdir -p atomspace-restful/build && cd atomspace-restful/build
           cmake -DCMAKE_BUILD_TYPE=Release ..
           make -j$(nproc)
-          sudo make install
-          sudo ldconfig
+          make install
+          ldconfig
           cd ../..
 
       # 07. Build and Install cogserver
@@ -139,8 +139,8 @@ jobs:
           mkdir -p cogserver/build && cd cogserver/build
           cmake -DCMAKE_BUILD_TYPE=Release ..
           make -j$(nproc)
-          sudo make install
-          sudo ldconfig
+          make install
+          ldconfig
           cd ../..
 
       # 08. Build and Install unify
@@ -149,8 +149,8 @@ jobs:
           mkdir -p unify/build && cd unify/build
           cmake -DCMAKE_BUILD_TYPE=Release ..
           make -j$(nproc)
-          sudo make install
-          sudo ldconfig
+          make install
+          ldconfig
           cd ../..
 
       # 09. Build and Install ure
@@ -159,8 +159,8 @@ jobs:
           mkdir -p ure/build && cd ure/build
           cmake -DCMAKE_BUILD_TYPE=Release ..
           make -j$(nproc)
-          sudo make install
-          sudo ldconfig
+          make install
+          ldconfig
           cd ../..
 
       # 10. Build and Install spacetime
@@ -169,8 +169,8 @@ jobs:
           mkdir -p spacetime/build && cd spacetime/build
           cmake -DCMAKE_BUILD_TYPE=Release ..
           make -j$(nproc)
-          sudo make install
-          sudo ldconfig
+          make install
+          ldconfig
           cd ../..
 
       # 11. Build and Install attention
@@ -179,8 +179,8 @@ jobs:
           mkdir -p attention/build && cd attention/build
           cmake -DCMAKE_BUILD_TYPE=Release ..
           make -j$(nproc)
-          sudo make install
-          sudo ldconfig
+          make install
+          ldconfig
           cd ../..
 
       # 12. Build and Install miner
@@ -189,8 +189,8 @@ jobs:
           mkdir -p miner/build && cd miner/build
           cmake -DCMAKE_BUILD_TYPE=Release ..
           make -j$(nproc)
-          sudo make install
-          sudo ldconfig
+          make install
+          ldconfig
           cd ../..
 
       # 13. Build and Install pln
@@ -199,8 +199,8 @@ jobs:
           mkdir -p pln/build && cd pln/build
           cmake -DCMAKE_BUILD_TYPE=Release ..
           make -j$(nproc)
-          sudo make install
-          sudo ldconfig
+          make install
+          ldconfig
           cd ../..
 
       # 14. Build and Install moses
@@ -209,8 +209,8 @@ jobs:
           mkdir -p moses/build && cd moses/build
           cmake -DCMAKE_BUILD_TYPE=Release ..
           make -j$(nproc)
-          sudo make install
-          sudo ldconfig
+          make install
+          ldconfig
           cd ../..
 
       # 15. Build and Install asmoses
@@ -219,8 +219,8 @@ jobs:
           mkdir -p asmoses/build && cd asmoses/build
           cmake -DCMAKE_BUILD_TYPE=Release ..
           make -j$(nproc)
-          sudo make install
-          sudo ldconfig
+          make install
+          ldconfig
           cd ../..
 
       # 16. Build and Install lg-atomese
@@ -229,8 +229,8 @@ jobs:
           mkdir -p lg-atomese/build && cd lg-atomese/build
           cmake -DCMAKE_BUILD_TYPE=Release ..
           make -j$(nproc)
-          sudo make install
-          sudo ldconfig
+          make install
+          ldconfig
           cd ../..
 
       # 17. Build and Install learn
@@ -239,8 +239,8 @@ jobs:
           mkdir -p learn/build && cd learn/build
           cmake -DCMAKE_BUILD_TYPE=Release ..
           make -j$(nproc)
-          sudo make install
-          sudo ldconfig
+          make install
+          ldconfig
           cd ../..
 
       # 18. Build and Install pattern-index
@@ -249,8 +249,8 @@ jobs:
           mkdir -p pattern-index/build && cd pattern-index/build
           cmake -DCMAKE_BUILD_TYPE=Release ..
           make -j$(nproc)
-          sudo make install
-          sudo ldconfig
+          make install
+          ldconfig
           cd ../..
 
       # 19. Build and Install vision
@@ -259,8 +259,8 @@ jobs:
           mkdir -p vision/build && cd vision/build
           cmake -DCMAKE_BUILD_TYPE=Release ..
           make -j$(nproc)
-          sudo make install
-          sudo ldconfig
+          make install
+          ldconfig
           cd ../..
 
       # 20. Build and Install opencog
@@ -269,8 +269,8 @@ jobs:
           mkdir -p opencog/build && cd opencog/build
           cmake -DCMAKE_BUILD_TYPE=Release ..
           make -j$(nproc)
-          sudo make install
-          sudo ldconfig
+          make install
+          ldconfig
           cd ../..
 
       # (Optional) Package Components
