--- a/.github/workflows/debian-packages.yml
+++ b/.github/workflows/debian-packages.yml
@@ -393,6 +393,7 @@ jobs:
           libiberty-dev \
           libasio-dev \
           cxxtest \
+          cython3 \
           python3-dev \
           python3-nose \
           valgrind \
@@ -469,6 +470,7 @@ jobs:
           libiberty-dev \
           libasio-dev \
           cxxtest \
+          cython3 \
           python3-dev \
           python3-nose \
           valgrind \
