Fix package name: link-grammar-dev -> liblink-grammar-dev
The correct Ubuntu package name is liblink-grammar-dev, not link-grammar-dev.
This fixes the 'Unable to locate package link-grammar-dev' error.

--- a/.github/workflows/ocall.yml
+++ b/.github/workflows/ocall.yml
@@ -43,7 +43,7 @@ jobs:
             uuid-dev \
             valgrind \
             libopendht-dev \
-            link-grammar-dev
+            liblink-grammar-dev
           
       - name: Install Cython
         run: python3 -m pip install --upgrade pip cython
