--- a/.github/workflows/ocall.yml
+++ b/.github/workflows/ocall.yml
@@ -43,7 +43,8 @@ jobs:
             uuid-dev \
             valgrind \
             libopendht-dev \
-            liblink-grammar-dev
+            liblink-grammar-dev \
+            liblink-grammar5
           
       - name: Install Cython
         run: python3 -m pip install --upgrade pip cython
