--- a/.github/workflows/occ-evo.yml
+++ b/.github/workflows/occ-evo.yml
@@ -22,7 +22,7 @@ jobs:
   # ============================================================================
   
   build-cogutil:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L1: Build CogUtil (Foundation)"
     
     steps:
@@ -83,7 +83,7 @@ jobs:
         sudo ldconfig
 
   build-coggml:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L1: Build CogGML (ML Framework)"
     
     steps:
@@ -123,7 +123,7 @@ jobs:
         sudo ldconfig
 
   build-agentic-chatbots:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L1: Build Agentic Chatbots"
     
     steps:
@@ -167,7 +167,7 @@ jobs:
   # ============================================================================
   
   build-atomspace:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L2: Build AtomSpace (Core)"
     needs: build-cogutil
     
@@ -237,7 +237,7 @@ jobs:
   # ============================================================================
   
   build-atomspace-storage:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L3: Build AtomSpace Storage (Backend)"
     needs: build-atomspace
     
@@ -302,7 +302,7 @@ jobs:
   # ============================================================================
   
   build-atomspace-rocks:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L4: Build AtomSpace RocksDB"
     needs: build-atomspace-storage
     
@@ -345,7 +345,7 @@ jobs:
         sudo ldconfig
 
   build-atomspace-pgres:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L4: Build AtomSpace PostgreSQL"
     needs: build-atomspace-storage
     
@@ -388,7 +388,7 @@ jobs:
         sudo ldconfig
 
   build-atomspace-dht:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L4: Build AtomSpace DHT"
     needs: build-atomspace-storage
     
@@ -431,7 +431,7 @@ jobs:
         sudo ldconfig
 
   build-atomspace-bridge:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L4: Build AtomSpace Bridge"
     needs: build-atomspace-storage
     
@@ -487,7 +487,7 @@ jobs:
   # ============================================================================
   
   build-cogserver:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L5: Build CogServer (Network Server)"
     needs: build-atomspace-storage
     
@@ -501,7 +501,8 @@ jobs:
         sudo apt-get install -y \
           cmake build-essential cxxtest \
           libboost-dev libboost-filesystem-dev libboost-system-dev libboost-thread-dev \
-          guile-3.0-dev cython3 python3-dev python3-nose
+          guile-3.0-dev cython3 python3-dev python3-nose \
+          libasio-dev
     
     - name: Rebuild Dependencies
       run: |
@@ -546,7 +547,7 @@ jobs:
   # ============================================================================
   
   build-atomspace-cog:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L6: Build AtomSpace Cog"
     needs: build-cogserver
     
@@ -588,7 +589,7 @@ jobs:
         sudo ldconfig
 
   build-atomspace-restful:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L6: Build AtomSpace RESTful"
     needs: build-cogserver
     
@@ -640,7 +641,7 @@ jobs:
         sudo ldconfig
 
   build-attention:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L6: Build Attention"
     needs: build-cogserver
     
@@ -694,7 +695,7 @@ jobs:
         sudo ldconfig
 
   build-learn:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L6: Build Learn"
     needs: build-cogserver
     
@@ -748,7 +749,7 @@ jobs:
         sudo ldconfig
 
   build-spacetime:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L6: Build SpaceTime"
     needs: build-cogserver
     
@@ -794,7 +795,7 @@ jobs:
   # ============================================================================
   
   build-unify:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L7: Build Unify"
     needs: build-atomspace
     
@@ -848,7 +849,7 @@ jobs:
         sudo ldconfig
 
   build-matrix:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L7: Build Matrix"
     needs: build-atomspace
     
@@ -894,7 +895,7 @@ jobs:
   # ============================================================================
   
   build-ure:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L8: Build URE (Unified Rule Engine)"
     needs: build-unify
     
@@ -952,7 +953,7 @@ jobs:
   # ============================================================================
   
   build-miner:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L9: Build Miner"
     needs: build-ure
     
@@ -1006,7 +1007,7 @@ jobs:
         sudo ldconfig
 
   build-asmoses:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L9: Build AS-MOSES"
     needs: build-ure
     
@@ -1065,7 +1066,7 @@ jobs:
   # ============================================================================
   
   build-pln:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L10: Build PLN (Probabilistic Logic)"
     needs: [build-ure, build-spacetime]
     
@@ -1125,7 +1126,7 @@ jobs:
   # ============================================================================
   
   build-opencog:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L11: Build OpenCog (Main Application)"
     needs: [build-pln, build-learn, build-attention]
     
@@ -1179,7 +1180,7 @@ jobs:
         sudo ldconfig
 
   build-benchmark:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L11: Build Benchmark"
     needs: build-opencog
     
@@ -1213,7 +1214,7 @@ jobs:
         make ${{ env.MAKEFLAGS }}
 
   build-agents:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L11: Build Agents"
     needs: build-opencog
     
@@ -1258,7 +1259,7 @@ jobs:
   # ============================================================================
   
   build-vision:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L12: Build Vision"
     needs: build-atomspace
     
@@ -1310,7 +1311,7 @@ jobs:
         sudo ldconfig
 
   build-sensory:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L12: Build Sensory"
     needs: build-atomspace
     
@@ -1362,7 +1363,7 @@ jobs:
         sudo ldconfig
 
   build-lg-atomese:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L12: Build Link Grammar Atomese"
     needs: build-atomspace
     
@@ -1404,7 +1405,7 @@ jobs:
         sudo ldconfig
 
   build-agi-bio:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L12: Build AGI Bio"
     needs: build-atomspace
     
@@ -1456,7 +1457,7 @@ jobs:
         sudo ldconfig
 
   build-cheminformatics:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L12: Build Cheminformatics"
     needs: build-atomspace
     
@@ -1508,7 +1509,7 @@ jobs:
         sudo ldconfig
 
   build-dimensional-embedding:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L12: Build Dimensional Embedding"
     needs: build-atomspace
     
@@ -1555,7 +1556,7 @@ jobs:
       continue-on-error: true
 
   build-pattern-index:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L12: Build Pattern Index"
     needs: build-atomspace
     
@@ -1602,7 +1603,7 @@ jobs:
       continue-on-error: true
 
   build-generate:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L12: Build Generate"
     needs: build-atomspace
     
@@ -1654,7 +1655,7 @@ jobs:
         sudo ldconfig
 
   build-visualization:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L12: Build Visualization"
     needs: build-atomspace
     
@@ -1701,7 +1702,7 @@ jobs:
       continue-on-error: true
 
   build-moses:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L12: Build MOSES"
     needs: build-atomspace
     
@@ -1753,7 +1754,7 @@ jobs:
   # ============================================================================
   
   build-cogself:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L13: Build CogSelf"
     needs: build-coggml
     
@@ -1794,7 +1795,7 @@ jobs:
         sudo ldconfig
 
   build-atomspace-accelerator:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L13: Build AtomSpace Accelerator"
     needs: build-atomspace
     
@@ -1850,7 +1851,7 @@ jobs:
   # ============================================================================
   
   build-atomspace-rpc:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L14: Build AtomSpace RPC"
     needs: build-atomspace
     
@@ -1903,7 +1904,7 @@ jobs:
         sudo ldconfig
 
   build-atomspace-websockets:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L14: Build AtomSpace WebSockets"
     needs: build-atomspace
     
@@ -1956,7 +1957,7 @@ jobs:
         sudo ldconfig
 
   build-atomspace-metta:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L14: Build AtomSpace MeTTa"
     needs: build-atomspace
     
@@ -2008,7 +2009,7 @@ jobs:
         sudo ldconfig
 
   build-integration:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L14: Build Integration (MachSpace)"
     needs: build-atomspace-storage
     
@@ -2060,7 +2061,7 @@ jobs:
         sudo ldconfig
 
   build-motor:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: "L14: Build Motor"
     needs: build-atomspace
     
