Fix moses build by adding missing utility headers to cogutil
PROBLEM:
- Moses failing with multiple missing header errors
- Headers like tree.h, KLD.h, functional.h not found in cogutil
- These headers exist in asmoses but moses depends on cogutil

ROOT CAUSE:
- Utility headers were moved from cogutil to asmoses
- Moses still references old cogutil paths
- Build fails because headers missing from cogutil

SOLUTION:
- Copied 15 utility headers from asmoses/utils to cogutil/util
- Added boost_ext directory with Boost extensions (2 headers)
- Updated cogutil CMakeLists.txt to install all new headers
- Fixed include paths in copied headers (asmoses/utils -> util)

HEADERS ADDED:
KLD.h, MannWhitneyU.h, based_variant.h, comprehension.h, digraph.h,
functional.h, hashing.h, iostreamContainer.h, jaccard_index.h,
lazy_normal_selector.h, log_prog_name.h, lru_cache.h, ranking.h,
selection.h, tree.h, boost_ext/ (2 files)

IMPACT:
- Moses now builds successfully
- All dependent packages can build
- Full CI/CD build completes

FILES CHANGED:
- cogutil/opencog/util/*.h: Added 15 new utility headers
- cogutil/opencog/util/boost_ext/: Added Boost extensions
- cogutil/opencog/util/CMakeLists.txt: Install new headers

This fixes moses build failure in CI/CD (works with build order fix 70eddfae).

--- a/cogutil/opencog/util/CMakeLists.txt
+++ b/cogutil/opencog/util/CMakeLists.txt
@@ -103,19 +103,31 @@ INSTALL(FILES
 	async_buffer.h
 	async_method_caller.h
 	backtrace-symbols.h
+	based_variant.h
 	cogutil.h
+	comprehension.h
 	Config.h
 	Counter.h
 	concurrent_queue.h
 	concurrent_set.h
 	concurrent_stack.h
+	digraph.h
 	dorepeat.h
 	empty_string.h
 	exceptions.h
+	functional.h
+	hashing.h
+	iostreamContainer.h
+	jaccard_index.h
+	KLD.h
+	lazy_normal_selector.h
 	lazy_random_selector.h
 	lazy_selector.h
+	log_prog_name.h
 	Logger.h
+	lru_cache.h
 	macros.h
+	MannWhitneyU.h
 	misc.h
 	mt19937ar.h
 	numeric.h
@@ -123,9 +135,12 @@ INSTALL(FILES
 	oc_omp.h
 	platform.h
 	pool.h
+	ranking.h
 	RandGen.h
 	random.h
+	selection.h
 	sigslot.h
+	tree.h
 	zipf.h
 	DESTINATION "include/opencog/util"
 )
@@ -139,3 +154,9 @@ IF (CYGWIN)
 ELSE (CYGWIN) #Linux
     INSTALL(TARGETS cogutil LIBRARY DESTINATION "lib${LIB_DIR_SUFFIX}/opencog")
 ENDIF (CYGWIN)
+
+# Install boost_ext headers
+INSTALL(DIRECTORY boost_ext
+	DESTINATION "include/opencog/util"
+	FILES_MATCHING PATTERN "*.h"
+)
